k8s-rpi-apps-k8s-dashboard/overlays/k8s/ingressroute-secure.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik
    avp.kubernetes.io/path: "k8secrets/k8s-dashboard"    
spec:
  routes:
  - match: Host(`<k8sdashboardhostname>`)
    kind: Rule
    services:
    - name: kubernetes-dashboard
      port: 443    
    middlewares:
      - name: basic-auth
        namespace: traefik-v2
  tls:
    certResolver: godaddy
