k8s-rpi-apps-k8s-dashboard/overlays/k8s/patch.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik  
spec:
  tls:
    certResolver: godaddy
